Modified index and style files.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,47 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>stravCalc</title>
     <link href="style.css" rel="stylesheet">
-    <script src="main.js"</script>
+    <script src="main.js"></script>
 </head>
+
 <body>
-    
+
+<div class="flexContainer">
+   <form> 
+       <table class="table">
+           <tr>
+               <td><button class="button" id="clear">C</button></td>
+               <td><output class="result" id = "output"></output></td>
+               <td></td>
+               <td></td>
+            </tr>
+            <tr>
+                <td><button class="button" id="seven">7</button></td>
+                <td><button class="button" id = "eight">8</button></td>
+                <td><button class="button" id = "nine">9</button></td>
+                <td><button class="button" id = "divide">/</button></td>
+            </tr>
+            <tr>
+                <td><button class="button" id = "four">4</button></td>
+                <td><button class="button" id = "five">5</button></td>
+                <td><button class="button" id = "six">6</button></td>
+                <td><button class="button" id = "multiply">X</button></td>
+            </tr>
+            <tr>
+                <td><button class="button" id = "one">1</button></td>
+                <td><button class="button" id = "one">2</button></td>
+                <td><button class="button" id = "two">3</button></td>
+                <td><button class="button" id = "three">-</button></td>
+            </tr>
+            <tr>
+                <td><button class="button" id = "subtract">0</button</td>
+                <td><button class="button" id = "zero">.</button></td>
+                <td><button class="button" id = "decimal">=</button></td>
+                <td><button class="button" id = "equals">+</button></td>
+            </tr>     
+       </table>
+   </form>
+</div>
+
 </body>
 </html>
