--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>stravCalc</title>
+    <title>Calculator</title>
     <link href="style.css" rel="stylesheet">
     <script src="main.js"></script>
 </head>
@@ -17,11 +17,9 @@
 <div class="calculatorKeys">
    <form> 
        <table class="table">
-           <tr>
-               <td><button class="button" data-action="clear">C</button></td>
-               <td><output class="result" id = "output"></output></td>
-               <td></td>
-               <td></td>
+            <tr>
+               <td><button class="button">C</button></td>
+               <td><output class="result"></output></td>
             </tr>
             <tr>
                 <td><button class="button">7</button></td>
@@ -55,7 +53,7 @@
 
 <div class="container">
         <p>
-          This component works exactly like the calculator you know. Click any number to start calculating!
+          DEMO VERSION
         </p>
         <div class="calculator">
           <div class="calculator__display">0</div>
